--- a/app/src/main/res/layout/activity_sign_up_email.xml
+++ b/app/src/main/res/layout/activity_sign_up_email.xml
@@ -53,6 +53,7 @@
             android:text="Email"/>
 
         <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/etemail"
             android:layout_width="285dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -73,6 +74,7 @@
             android:text="Password"/>
 
         <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/etpassword"
             android:layout_width="285dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -116,6 +118,5 @@
             android:textSize="20dp"/>
 
     </androidx.cardview.widget.CardView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
